recursion.cons.lessons.recursion.cons.Min.scala.error
min:2: error: ':' expected but '[' found.
	def lambda(l:list[Int], v[Int]): Int= {
                                 ^min:10: error: identifier expected but '}' found.
}
^